# Aumiao

./: .gitignore  Aumiao-py.bcmkn  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-merge.yml  build.yml  ci.yml
Aumiao-py/: .gitignore  DISCLAIMER.txt  Naming-Convention.md  Plugin-Development.md  README.md  awa.py  cliff.toml  cspell.json  main.py  mainWindows.py  pyproject.toml  readme.txt  recover.py  requirements.in  ruff.toml  typos.toml
Aumiao-py/asset/: GET_admin_samples_subject.json  GET_admins_app_topics_all.json  GET_forums_notice-boards.json  IDE_API_address.txt  K4_block.txt  KN_block.txt  KN_editor_API.json  MESSAGE_TYPES.txt  NEMO_TO_NEKO.txt  block_enum.txt
Aumiao-py/aumiao/: __init__.py
Aumiao-py/aumiao/api/: __init__.py  auth.py  clouddb.py  community.py  edu.py  forum.py  user.py  whale.py  work.py
Aumiao-py/aumiao/core/: __init__.py  base.py  cloudcfg.py  compile.py  compiler.py  deepser.py  editorkf.py  editorkn.py  models.py  process.py  retrieve.py  services.py
Aumiao-py/aumiao/utils/: __init__.py  acquire.py  data.py  decorator.py  file.py  tool.py
Aumiao-py/cache/: info.json
Aumiao-py/clitheme/: clitheme.py
Aumiao-py/data/: cache.json  data.json  setting.json
Aumiao-py/deprecated/: Plugin-Development.md  plugin.py
Aumiao-py/document/: Building-System.md  ID-Identify.md  Naming-Convention.md  Plugin-Development.md
Aumiao-py/gui/: __init__.py  gui.py  gui.py.old  start.py  start.py.old  ui.py
Aumiao-py/gui/components/dialogs/: Aumiao_user_login_dialog.py
Aumiao-py/gui/components/page_about/: page_about.py
Aumiao-py/gui/components/page_homepage/: page_homepage.py
Aumiao-py/gui/components/page_icons/: page_icons.py
Aumiao-py/gui/components/page_widgets/: page_widgets.py
Aumiao-py/lua/api/: community.lua  edu.lua  forum.lua  user.lua  whale.lua  work.lua
Aumiao-py/lua/core/: client.lua
Aumiao-py/lua/utils/: acquire.lua  data.lua  tool.lua
Aumiao-py/plugin/: __init__.py  chatmindai.py  dashscope.py
Aumiao-py/plugins/: greet.py  patch.py
Aumiao-py/resource/: aumiao.iss
Aumiao-py/resource/scripts/: Setup.iss
Aumiao-py/response/: GET_forums_boards_all.json  GET_web_users_recommended.json  IDE_address.txt
Aumiao-py/responses/: GET_fictions_index-list-ids.json
Aumiao-py/rust/: Cargo.toml  main.rs
Aumiao-py/rust/src/utils/: acquire.rs  data.rs  decorator.rs  file.rs  tool.rs
Aumiao-py/src/: __init__.py
Aumiao-py/src/api/: __init__.py  auth.py  coco.py  codegame.py  community.py  deepseek.py  edu.py  forum.py  library.py  pickduck.py  shop.py  user.py  whale.py  work.py
Aumiao-py/src/core/: __init__.py  base.py  client.py  cloudcfg.py  compile.py  complier.py  convert.py  deepser.py  editor.py  editorkf.py  editorkn.py  editors.py  index.py  manage.py  motion.py  obtain.py  process.py  report_handler.py  retrieve.py  services.py  tool.py  union.py
Aumiao-py/src/plugin/: __init__.py  chatmindai.py  dashscope.py
Aumiao-py/src/utils/: __init__.py  acquire.py  data.py  decorator.py  dschat.py  file.py  plugin.py  tool.py
Aumiao-ts/: package-lock.json  package.json
Aumiao-ts/src/: utils.ts
Aumiao-ts/src/client/auth/: cred.ts
data/: cache.json
log/: 1740217080.txt
