[project]
name = "Aumiao"
email = "aumiao@aurzex.top"
version = "2.3.0"
authors = [
    { name = "Aumiao Team", email = "aumiao@aurzex.top" },
    { name = "DontLoveBy", email = "laya200900@outlook.com" },
    { name = "Aurzex" },
    { name = "MoonLeaaaf" },
    { name = "Nomen" },
    { name = "MiTao" }
]
description = "Aumiao æ˜¯ä¸€æ¬¾é’ˆå¯¹äºŽç¼–ç¨‹çŒ«ç¤¾åŒºçš„çˆ¬è™«(åˆ’æŽ‰)ä½ è¯´çš„å¯¹,ä½†æ˜¯ã€ŠAumiaoã€‹æ˜¯ä¸€æ¬¾ç”± Aumiao å¼€å‘å›¢é˜Ÿå¼€å‘çš„ç¼–ç¨‹çŒ«è‡ªåŠ¨åŒ–å·¥å…· äºŽ 2023 å¹´ 5 æœˆ 2 æ—¥å‘å¸ƒ,å·¥å…·ä»¥ç¼–ç¨‹çŒ«å®‡å®™ä¸ºèˆžå°,çŽ©å®¶å¯ä»¥æ‰®æ¼”æ¯›æ¯¡ç”¨æˆ·åœ¨è¿™ä¸ªç­”è¾© ðŸ’© ç¤¾åŒºæ¯›çº¿ ðŸ§¶ åç¼©å¹¶é‚‚é€…å„ç§ä¸åŒçš„ä¹å­äºº ðŸ˜‹ã€‚åœ¨é¢†æ‚Ÿäº†ã€ŠçŒ«ç«™åœ£ç»ã€‹åŽ,æ‰“è´¥å¼ºæ•Œæ‰«åŽ•æ‰€ ðŸ˜¡,åœ¨ç»´æŠ¤ç¼–ç¨‹çŒ«æ ¸é‚ªé“€åˆ çš„å±€é¢çš„åŒæ—¶,é€æ­¥æ­å¼€ç¼–ç¨‹çŒ«ç¤¾åŒºçš„çœŸç›¸å®˜æ–¹ç½‘ç«™:https://aumiao.aurzex.top è”ç³»æˆ‘ä»¬: Aumiao@aurzex.top"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests>=2.32", "websocket-client>=1.8.0"]

[project.scripts]
aumiao = "main:main"

[dependency-groups]
dev = ["nuitka>=2.0.0"]
