[package]
name = "Aumiao"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Codemao API client implementation in Rust"

# 添加二进制目标
[[bin]]
name = "Aumiao"
path = "src/main.rs"

[lib]
name = "Aumiao"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1.45", features = ["rt", "fs"] } # 单线程runtime
serde = { version = "1.0", features = ["derive"] }
miniserde = "0.1"
config = "0.15"
time = "0.3"
